Streamlit Secrets Management

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /venv_spotify_compare/
 C:\Users\Jaume\Documents\Python Projects\spotify_compare\data\external\api_keys.csv
+data/external/api_keys.csv
